# raycasting-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-build-debug.yml  cmake-build-macos.yml  cmake-build-multi-platform.yml  cmake-build-release.yml  cmake-build-ubuntu.yml  cmake-build-windows.yml  cmake-multi-platform.yml
ressources/: imgui.ini
src/: ColorHelper.hpp  DrawingHelper.hpp  ImGuiStyle.hpp  MiniMapViewport.hpp  RaycastingCamera.hpp  RaycastingCameraViewport.hpp  RaycastingMath.hpp  World.cpp  World.hpp  WorldRasterizer.cpp  WorldRasterizer.hpp  main.cpp
src/Editor/: MiniMapViewport.hpp  RaycastingCameraViewport.hpp  RenderingOrchestrator.hpp  WorldEditor.cpp  WorldEditor.hpp  WorldEditorDrawTool.cpp
src/Renderer/: RaycastingCamera.hpp  RaycastingMath.hpp  World.hpp  WorldRasterizer.cpp  WorldRasterizer.hpp
src/Utils/: ColorHelper.hpp  DrawingHelper.hpp
vendors/: CMakeLists.txt
vendors/rlImGui/: rlImGui.cpp  rlImGui.h
